# Harmony

apps/desktop/: .gitignore
apps/desktop/src-tauri/: .gitignore  Cargo.toml  config.sample.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/scripts/: prepare-openssl-runtime.ps1  publish-github-update.ps1  release-day.ps1
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/core/: config.rs  events.rs  mod.rs  soundboard.rs
apps/desktop/src-tauri/src/core/soundboard_defaults/: chime.sb  pop.sb  rim.sb
apps/desktop/src-tauri/src/core/voice/: audio_in.rs  audio_out.rs  client.rs  codec.rs  hotkeys.rs  mod.rs  quality.rs  resampler.rs  vad.rs
apps/desktop/src-tauri/tests/: voice_quality.rs
apps/desktop/src-ui/: package-lock.json  package.json  tailwind.config.js
apps/desktop/src-ui/src/: App.tsx  index.css
apps/desktop/src-ui/src/components/: badge-icons.tsx
apps/desktop/src-ui/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  popover.tsx  select.tsx  sheet.tsx  slider.tsx  switch.tsx
apps/desktop/src-ui/src/lib/: badges.ts  core.ts  types.ts
apps/server/: Dockerfile  README.md  entrypoint.sh  murmur.ini.template  railway.json  railway.toml
docs/: Project-plan.md  building.md
