[package]
name = "harmony-desktop"
version = "0.12.9"
description = "Harmony desktop voice chat client"
authors = ["Harmony"]
license = "MIT"
edition = "2021"
rust-version = "1.79.0"

[features]
default = ["real-opus"]
real-opus = ["dep:opus2"]

[lib]
name = "harmony_desktop_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-native-tls = "0.3"
tokio-util = { version = "0.6.10", features = ["codec"] }
native-tls = "0.2"
mumble-protocol = "0.4.1"
cpal = "0.16"
dirs = "6.0"
bytes = "1"
opus2 = { version = "0.3.3", optional = true }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3", "ogg", "vorbis", "wav", "pcm"] }
rubato = "1.0.1"
crossbeam-queue = "0.3.12"
audioadapter-buffers = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
